--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,7 @@ updates:
       interval: "weekly"
     open-pull-requests-limit: 10
       
-  - package-ecosystem: "yarn"
+  - package-ecosystem: "npm"
     directory: "/client"
     schedule:
       interval: "weekly"
